# core

./: README.md  code-review-report.md  findings.json  peerpedia_core_dump.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  scoring-architecture.md
docs/superpowers/plans/: 2026-07-07-meta-content-storage-split.md  2026-07-07-review-storage-split.md
docs/superpowers/specs/: 2026-07-07-meta-content-storage-split-design.md
peerpedia_core/: __init__.py  crypto.py  crypto_ed25519.py  exceptions.py  peerpedia.py
peerpedia_core/protocols/: __init__.py  auth.py  authorizer.py  compiler.py  lifecycle.py  review_content_storage.py  review_meta_storage.py  review_storage.py  scoring.py  storage.py  sync.py  user_storage.py
peerpedia_core/protocols/storage/: __init__.py  article.py  review.py  user.py
peerpedia_core/types/: __init__.py  entities.py  queries.py  scores.py  writes.py
tests/: conftest.py  test_peerpedia.py  test_reference.py
